--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "docx": "^9.1.1",
+    "docx4js": "^3.3.0",
+    "docxtemplater": "^3.59.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "fs": "^0.0.1-security",
+    "mammoth": "^1.9.0",
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7",
+    "pizzip": "^3.1.8"
   }
 }
