--- a/package.json
+++ b/package.json
@@ -2,30 +2,23 @@
   "name": "autenticsign",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/server.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "autenticsign": "file:",
-    "axios": "^1.7.9",
-    "cookie-parser": "~1.4.4",
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "docx": "^9.1.1",
-    "docx-pdf": "^0.0.1",
-    "docx4js": "^3.3.0",
-    "docxtemplater": "^3.59.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fontkit": "^2.0.4",
-    "fs": "^0.0.1-security",
-    "mammoth": "^1.9.0",
+    "express-list-routes": "^1.2.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "path": "^0.12.7",
-    "pdf-lib": "^1.17.1",
-    "pizzip": "^3.1.8",
-    "request-promise-native": "^1.0.9"
+    "supertest": "^7.0.0"
   }
 }
