--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-list-routes": "^1.2.4"
+    "express-list-routes": "^1.2.4",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
