Logs error de datos

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # 🔹Configuración APP
 PORT=3000
 
+# 🔹Configuración DB
+
+MONGODB_URI="mongodb://localhost:27017/AutenticSign" # 🔹 Cambiar por la URI de tu base de datos MongoDB Atlas o local
+USER_DB="jm0sp1923" # 🔹 Cambiar por el usuario de tu base de datos MongoDB Atlas o local
+PASSWORD_DB="xuzC42XvAZ992123" # 🔹 Cambiar por la contraseña de tu base de datos MongoDB Atlas o local
+
 # 🔹Configuración Autentic QA
 AUDIENCE="qa-ejemplo.autenticsign.com"
 GRANT_TYPE="client_credentials"
