Añadidos comentarios explicativos a los archivos para su uso y depuración correcta

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,32 @@
+# 🔹Configuración de variables de entorno para el proyecto AutenticSign
+
 # 🔹Configuración APP
-PORT=3000
+PORT=3000  # 🔹 Puerto en el que corre tu aplicación
 
 # 🔹Configuración DB
+MONGODB_URI="mongodb://localhost:27017/AutenticSign"  # 🔹 URI de tu base de datos MongoDB, cambia por la URI de MongoDB Atlas o local
+USER_DB="jm0sp1923"  # 🔹 Usuario de tu base de datos MongoDB
+PASSWORD_DB="xuzC42XvAZ992123"  # 🔹 Contraseña de tu base de datos MongoDB
 
-MONGODB_URI="mongodb://localhost:27017/AutenticSign" # 🔹 Cambiar por la URI de tu base de datos MongoDB Atlas o local
-USER_DB="jm0sp1923" # 🔹 Cambiar por el usuario de tu base de datos MongoDB Atlas o local
-PASSWORD_DB="xuzC42XvAZ992123" # 🔹 Cambiar por la contraseña de tu base de datos MongoDB Atlas o local
-
-# 🔹Configuración Autentic QA
-AUDIENCE="qa-ejemplo.autenticsign.com"
-GRANT_TYPE="client_credentials"
-CLIENT_ID="your-autentic-client-id"
-CLIENT_SECRET="your-autentic-client-secret"
+# 🔹Configuración Autentic -- Para obtener estas credenciales ponte en contacto con Autentic
+AUDIENCE="qa-ejemplo.autenticsign.com"  # 🔹 Audience para autenticar solicitudes en AutenticSign
+GRANT_TYPE="client_credentials"  # 🔹 Tipo de autenticación para obtener el token
+CLIENT_ID="your-autentic-client-id"  # 🔹 Client ID para tu aplicación en AutenticSign
+CLIENT_SECRET="your-autentic-client-secret"  # 🔹 Client Secret para tu aplicación en AutenticSign
 
 # 🔹Endpoints Autentic
-END_POINT_GET_TOKEN_API_AUTNETIC_SIGN="https://authorizer.autenticsign.com/v2/authorizer/getToken"
-END_POINT_API_AUTNETIC_SIGN="https://qa-ejemplo.autenticsign.com/v3/signing-process/"
-END_POINT_API_GET_FILE="https://qa-ejemplo.autenticsign.com/v3/signing-process/get-files"
+END_POINT_GET_TOKEN_API_AUTNETIC_SIGN="https://authorizer.autenticsign.com/v2/authorizer/getToken"  # 🔹 Endpoint para obtener el token de AutenticSign
+END_POINT_API_AUTNETIC_SIGN="https://qa-ejemplo.autenticsign.com/v3/signing-process/"  # 🔹 Endpoint para acceder a los procesos de firma en AutenticSign
+END_POINT_API_GET_FILE="https://qa-ejemplo.autenticsign.com/v3/signing-process/get-files"  # 🔹 Endpoint para obtener archivos relacionados con los procesos de firma
 
-# 🔹Configuración App HubSpot
-CLIENT_ID_HUBSPOT="your-hubspot-client-id"
-CLIENT_SECRET_HUBSPOT="your-hubspot-client-secret"
-END_POINT_GET_TOKEN_API_HUBSPOT="https://api.hubapi.com/oauth/v1/token"
-SCOPE="crm.objects.contacts.read,oauth,crm.objects.custom.write,crm.objects.custom.read,files,crm.objects.owners.read,tickets"
-REFRESH_TOKEN_HUBSPOT="your-hubspot-refresh-token"
+# 🔹Configuración App HubSpot -- Para obtener estas credenciales, crea una aplicación en HubSpot Developer (consulta la documentación)
+CLIENT_ID_HUBSPOT="your-hubspot-client-id"  # 🔹 Client ID para tu aplicación en HubSpot
+CLIENT_SECRET_HUBSPOT="your-hubspot-client-secret"  # 🔹 Client Secret para tu aplicación en HubSpot
+END_POINT_GET_TOKEN_API_HUBSPOT="https://api.hubapi.com/oauth/v1/token"  # 🔹 Endpoint para obtener el token de HubSpot
+SCOPE="crm.objects.contacts.read,oauth,crm.objects.custom.write,crm.objects.custom.read,files,crm.objects.owners.read,tickets"  # 🔹 Alcance de permisos para la aplicación de HubSpot
+REFRESH_TOKEN_HUBSPOT="your-hubspot-refresh-token"  # 🔹 Token de actualización de HubSpot
 
-# 🔹Configuración App Azure Entra ID
-CLIENT_SECRET_AD="your-azure-client-secret"
-CLIENT_ID_AD="your-azure-client-id"
-TENANT_ID_AD="your-azure-tenant-id"
+# 🔹Configuración App Azure Entra ID -- Para obtener estas credenciales, crea una aplicación en Azure AD - Microsoft Entra
+CLIENT_SECRET_AD="your-azure-client-secret"  # 🔹 Client Secret para tu aplicación en Azure AD
+CLIENT_ID_AD="your-azure-client-id"  # 🔹 Client ID para tu aplicación en Azure AD
+TENANT_ID_AD="your-azure-tenant-id"  # 🔹 Tenant ID para tu aplicación en Azure AD
